--- a/main.html
+++ b/main.html
@@ -4,11 +4,25 @@
 
 <head>
 	<link rel="stylesheet" href="styles.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
 </head>
 
 <body>
 	<!-- the entire body must be written by student -->
-    <script type="text/javascript" src="./script.js">
+   <button type="button" id="button-1" class="btn btn-primary ">Primary buttonOutline secondary button</button>
+   <button type="button" id="#button-2" class="btn btn-outline-secondary">Outline secondary button</button>
+   <button type="button" id="#button-3" class="btn btn-success btn-lg">Success large button</button>
+   <button type="button" id="#button-4" class="btn btn-danger btn-sm">Danger small button</button>
+   <button type="button" id="#button-5" class="btn btn-warning btn-lg fullscreen-btn">Warning large full-screen width button</button>
+   <button type="button" id="#button-6" class="btn btn-info" disabled>Disabled info button</button>
+   <button type="button" id="#button-7" class="btn btn-light">Light button</button>
+   <a href="#" id="#button-8" class="btn  active" role="button" aria-pressed="true">Link button</a>
+ 
+
+	
+	
+	
+	<script type="text/javascript" src="./script.js">
 </script>
 
 </body>
