--- a/main.html
+++ b/main.html
@@ -9,14 +9,14 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-   <button type="button" id="button-1" class="btn btn-primary ">Primary buttonOutline secondary button</button>
-   <button type="button" id="#button-2" class="btn btn-outline-secondary">Outline secondary button</button>
-   <button type="button" id="#button-3" class="btn btn-success btn-lg">Success large button</button>
-   <button type="button" id="#button-4" class="btn btn-danger btn-sm">Danger small button</button>
-   <button type="button" id="#button-5" class="btn btn-warning btn-lg fullscreen-btn">Warning large full-screen width button</button>
-   <button type="button" id="#button-6" class="btn btn-info" disabled>Disabled info button</button>
-   <button type="button" id="#button-7" class="btn btn-light">Light button</button>
-   <a href="#" id="#button-8" class="btn  active" role="button" aria-pressed="true">Link button</a>
+   <button type="button" id="button-1" class="btn btn-primary ">Button-1</button>
+   <button type="button" id="#button-2" class="btn btn-outline-secondary">Button-2</button>
+   <button type="button" id="#button-3" class="btn btn-success btn-lg">Button-3</button>
+   <button type="button" id="#button-4" class="btn btn-danger btn-sm">Button-4</button>
+   <button type="button" id="#button-5" class="btn btn-warning btn-lg fullscreen-btn">Button-5</button>
+   <button type="button" id="#button-6" class="btn btn-info" disabled>Button-6</button>
+   <button type="button" id="#button-7" class="btn btn-light">Button-7</button>
+   <a href="#" id="#button-8" class="btn  active" role="button" aria-pressed="true">Button-8</a>
  
 
 	
